firewall.tf
resource "aws_security_group" "sg_servidor" {
    
    vpc_id = aws_vpc.vpc.id

    #regla de entrada para SSH
    ingress  {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["190.121.114.14/32"]
    }

    #regla de entrada para HTTP
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    #regla de entrada para HTTPS
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    
    #reglas de salida
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    }
}
